--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src"
+    "lint": "eslint src --max-warnings=0",
+    "postinstall": "husky install"
   },
+  "lint-staged": {
+		"src/**/*": [
+			"yarn lint --fix"
+		]
+	},
   "dependencies": {
     "path": "^0.12.7",
     "react": "^18.0.0",
@@ -25,6 +31,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "5.1.1",
+    "lint-staged": "10.5.4",
     "prettier": "2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
