--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "postinstall": "husky install"
   },
   "lint-staged": {
-		"src/**/*": [
-			"yarn lint --fix"
-		]
-	},
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
+  },
   "dependencies": {
-    "path": "^0.12.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-react": "^1.3.0",
