--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "styled-components.d.ts"],
+  "include": ["src", "styled-components.d.ts", "**/*.ts", "**/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
